<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_franka_panda_moveit_config</name>
  <version>0.0.0</version>
  <description>
    <p>
      MoveIt Resources for working with: Franka Emika Panda robot.
    </p>
  </description>
  <author email="peterdavidfagan@gmail.com">Peter David Fagan</author>
  <maintainer email="peterdavidfagan@gmail.com">Peter David Fagan</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_resources_franka_panda_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
